# gt4-rs-notes

./: Cargo.toml  README.md  build.rs  main.py
resources/: create_page.ui  details_page.ui  note_row.ui  resources.gresource.xml  window.ui
src/: main.rs
src/create_page/: imp.rs  mod.rs
src/details_page/: imp.rs  mod.rs
src/note_object/: imp.rs  mod.rs
src/note_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
