[package]
name = "gtk4-rs-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_2"] }
chrono = "0.4.31"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies.gtk]
version = "0.7.2"
package = "gtk4"
features = ["v4_8"]

[build-dependencies]
glib-build-tools = "0.18.0"