[package]
name = "gtk4-rs-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_4"] }
chrono = "0.4.39"
rusqlite = { version = "0.33.0", features = ["bundled"] }

[dependencies.gtk]
version = "0.9.5"
package = "gtk4"
features = ["v4_8"]

[build-dependencies]
glib-build-tools = "0.20.0"